<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackGround"
    android:weightSum="1"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_keyboard_arrow_left"/>

        <ImageView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/banwirelogo200white"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="28dp"
            android:src="@drawable/ic_refresh"
            android:visibility="invisible"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/tip_chagngedpass"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="8dp"
            android:hint="@string/hint_email_forget"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:inputType="textEmailAddress"
            android:visibility="gone"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/forgetpasstest"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Red"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/send_instructions"
            android:textStyle="bold"
            android:padding="8dp"
            android:elevation="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:visibility="gone"
            android:textAllCaps="false"/>


        <TextView
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/call"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10"
        android:gravity="center">




    </LinearLayout>






</LinearLayout>